@@ -14,6 +14,9 @@ TODO
 * reimplement repeating thread as a queued thread?
 * add glib support
 
+20150904
+* updated common
+
 20150406
 * code clean up
 
